*** empty log message ***

--- a/doc/src/manual/ch-messages.tex
+++ b/doc/src/manual/ch-messages.tex
@@ -209,6 +209,8 @@ enough ``context'' information about the event.
 
 \subsection{Modelling packets}
 
+\subsubsection{Arrival gate and time}
+
 The following methods can tell where the message came from and
 where it arrived (or will arrive if it is currently scheduled or under way.)
 
