*** empty log message ***

--- a/doc/src/manual/ch-opp-design.tex
+++ b/doc/src/manual/ch-opp-design.tex
@@ -98,8 +98,10 @@ each other:
 \section{Embedding {\opp}}
 \label{sec:ch-opp-design:embedding}
 
-Embedding is a special issue\index{simulation!embedding}. You probably
-do not want to keep the appearance of the simulation program, so you
+This section discusses the issues of embedding the simulation kernel
+or a simulation model into a larger application.
+
+You probably do not want to keep the appearance of the simulation program, so you
 do not want Cmdenv and Tkenv. You may or may not want to keep Envir.
 
 What you'll absolutely need for a simulation to run is the Sim
